--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puppeteer-page-proxy",
+  "name": "@gettymoney/puppeteer-page-proxy",
   "description": "Additional Node.js module to use with 'puppeteer' for setting proxies per page basis.",
   "version": "1.3.0",
   "author": "Cuadrix <cuadrix12000@gmail.com> (https://github.com/Cuadrix)",
